added footer div, created game functions, not working completely

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         </div>
     </div>
 
-    <footer>@slayeroak</footer>
+    <div class="footer">
+        <footer>@slayeroak</footer>
+    </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
     
 </body>
 </html>
